# aigenda

./: AGENT_ARCHITECTURE.md  Cargo.toml  ENHANCED_AGENT_SUMMARY.md  README.md  agent_flow_diagram.md
.github/workflows/: ci.yml
src/: app.rs  cli.rs  error.rs  lib.rs  main.rs  models.rs
src/agent/: mod.rs
src/agent/confirmation/: mod.rs
src/agent/core/: agent.rs  mod.rs
src/agent/execution/: mod.rs
src/agent/json_parser/: mod.rs
src/agent/memory/: mod.rs
src/agent/prompts/: mod.rs
src/agent/registry/: mod.rs
src/agent/streaming/: mod.rs
src/agent/tool_executor/: mod.rs
src/agent/tools/: mod.rs  schema.rs
src/agent/tools/notes/: mod.rs
src/ai/: claude.rs
src/commands/: add.rs  agent.rs  agent_stub.rs  list.rs  mod.rs
src/storage/: fs.rs  mod.rs
tests/: cli_smoke.rs  storage_fs.rs
