[package]
name = "aigenda"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

# Tokio for async support
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "time"], optional = true }

# Feature-gated (Phase 2)
reqwest = { version = "0.12", features = ["json"], optional = true }
dotenvy = { version = "0.15", optional = true }
async-trait = { version = "0.1", optional = true }
uuid = { version = "1.0", features = ["v4"], optional = true }

[features]
default = ["tokio"]
ai = ["tokio", "reqwest", "dotenvy", "async-trait", "uuid"]

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"

